# nterm

./: CMakeLists.txt  README.md  config
src/: config.cpp  config.hpp  main.cpp  nterm.cpp  nterm.hpp  terminal.cpp  terminal.hpp  vte_terminal.hpp
